Fixes overlapping issue

--- a/client/stylesheets/mapFilters.import.styl
+++ b/client/stylesheets/mapFilters.import.styl
@@ -9,7 +9,7 @@
   position absolute
   top 0
   right 0
-  z-index 10000
+  z-index 100
   width 300px
   border-radius 0 0 5px 5px
   border 1px solid secondary
